--- a/backend/package.json
+++ b/backend/package.json
@@ -5,5 +5,8 @@
     "express": "^4.19.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.4"
+  },
+  "scripts": {
+    "start" : "nodemon app.js"
   }
 }
